test-suite/invalid/event-missing-place.glx
# TEST: event-missing-place
# EXPECT: invalid
# ERROR: "place field is required"
# DESCRIPTION: Event must reference an existing place

id: event-h8i9j0k1
version: "1.0"
type: event
event_type: birth
date: "1850-01-15"
# Missing required place field
participants:
  - person: person-john-smith
    role: subject
